# Talk2Me

./: .gitignore  AGENT_INSTRUCTIONS.md  PRIVACY.md  PROMPT_QUEUE.md  README.md  ROADMAP.md  RUNBOOK.md  Talk2Me.py  demo_cli.py  mic_actions.py  pyproject.toml  requirements.txt  ~$README.md
Planning/DEV/: PROMPT_QUEUE.md  ROADMAP.md
Planning/sessions/: session_2026-06-11.md  session_2026-06-12.md  session_2026-06-13.md  session_2026-06-14.md  session_2026-06-15.md  session_2026-06-16.md
assets/: README.md
config/: exhibit.yaml
encoder/: inference.py  train.py
questions/: calibration.yaml  confrontational.yaml  personal.yaml
scripts/: com.talk2me.exhibit.plist  generate_fixtures.py  prefetch_models.py  smoke_test.sh
synthesizer/: inference.py  infolog.py
talk2me/: __init__.py  app.py  telemetry.py
talk2me/audio/: __init__.py  io.py  vad.py
talk2me/engine/: __init__.py  llm_adapter.py  question_bank.py  state_machine.py
talk2me/stt/: __init__.py  whisper.py
talk2me/tts/: __init__.py  reference_buffer.py  voice_cloner.py
talk2me/ui/: __init__.py  dashboard.html  server.py
tests/: simulation.py  test_audio.py  test_engine.py  test_features_10_11_12.py  test_features_15_16_17.py  test_scaffold.py  test_simulation.py  test_stt.py  test_telemetry.py  test_tts.py
tests/fixtures/voices/: README.md  speaker_f1.txt  speaker_m1.txt  speaker_nn1.txt
vocoder/: distribution.py  inference.py  train.py
vocoder/models/: deepmind_version.py  fatchord_version.py
