[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talk2me"
version = "0.1.0"
description = "Voice-transfer art installation: speaks your questions back in your own voice"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.18.0",
    "mlx-whisper>=0.4.0",
    "f5-tts-mlx>=0.9.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "onnxruntime>=1.18.0",
]

[project.optional-dependencies]
llm = [
    "mlx-lm>=0.18.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
talk2me = "talk2me.app:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "model: requires ML model weights to be downloaded (slow, skipped in CI)",
    "hardware: requires real audio hardware",
]
